[package]
authors = ["Taylor Spencer <tayspen72@gmail.com>"]
edition = "2018"
name = "app"
version = "0.1.0"

[features]
device = []

[dependencies]
cortex-m = "*"
cortex-m-rt = { version = "*", features = ["device"] }
cortex-m-semihosting = "*"
msp432p401r-pac = { version = "*", features = ["rt"] }
panic-halt = "*"
panic-semihosting = "*"

[[bin]]
name = "app"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
